Added GitHub logo github logo in footer

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <div id="page">
         <div id="containerLeft">
-
+            <div id="header">
+                <img src="bunger.gif" alt="BUNGER:D">
+                <h1>BUNGER</h1>
+            </div>
         </div>
         <div id="containerRight">
             <div id="top">
-                <h2>This is not a real online service! You know you need something like this in your life to help you realize
-                    you deepest dreams. Sign up <em>now</em> to get started.
+                <h2>BUNGER!! Bunger bunger. Bunger, buuuuuunger. Bunger! Bunger bunger bunger bunger. Bunger?? Bunger bunger!! Sign up <em>now</em> to get started.
                 </h2>
                 <h2>You <em>know</em> you want to.</h2>
             </div>
@@ -59,7 +61,9 @@
                 </div>
             </form>
             <footer>
-                <p>link to github will go here using logo or something idk</p>
+                <a href="https://github.com/TyDieGuy99">
+                    <img src="github.png" alt="github link">
+                </a>
             </footer>
         </div>
     </div>
