small edits small changes in different parts of index

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <div id="containerLeft">
             <div id="header">
                 <img src="bunger.gif" alt="BUNGER:D">
-                <h1>BUNGER</h1>
+                <h1>BUNGER!</h1>
             </div>
         </div>
         <div id="containerRight">
             <div id="top">
-                <h2>BUNGER!! Bunger bunger. Bunger, buuuuuunger. Bunger! Bunger bunger bunger bunger. Bunger?? Bunger bunger!! Sign up <em>now</em> to get started.
-                </h2>
+                <h2>BUNGER!! Bunger bunger. Bunger, buuuuuunger. Bunger! Bunger bunger bunger bunger. Bunger?? Bunger bunger!!</h2>
+                <h2>Sign up <em>now</em> to get started.</h2>
                 <h2>You <em>know</em> you want to.</h2>
             </div>
             <form action="">
                 <div id="form">
-                    <h2 class="formTitle">Let's do this!</h2>
+                    <h2 class="formTitle">Bunger Bunger ! ! !</h2>
                             <div class="input">
                                 <label for="nameFirst">First Name: </label>
                                 <input type="text" name="name_first" id="namefirst" placeholder="Robert" minlength="1" pattern="[a-zA-Z]*" required>
@@ -57,7 +57,7 @@
                 </div>
                 <div id="button">
                     <button type="submit" id="submitBtn">Create Account</button>
-                    <p>Already have an account? <a href="#">Log in</a></p>
+                    <p>Already have an account? <a href="https://www.youtube.com/watch?v=8s6KTJJVGzo">Log in</a></p>
                 </div>
             </form>
             <footer>
