changed photo filepaths changed paths to match in folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="page">
         <div id="containerLeft">
             <div id="header">
-                <img src="bunger.gif" alt="BUNGER:D">
+                <img src="photos/bunger.gif" alt="BUNGER:D">
                 <h1>BUNGER!</h1>
             </div>
         </div>
@@ -62,7 +62,7 @@
             </form>
             <footer>
                 <a href="https://github.com/TyDieGuy99">
-                    <img src="github.png" alt="github link">
+                    <img src="photos/github.png" alt="github link">
                 </a>
             </footer>
         </div>
