--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <h2>BUNGER!! Bunger bunger. Bunger, buuuuuunger. Bunger! Bunger bunger bunger bunger. Bunger?? Bunger bunger!!</h2>
                 <h2>Sign up <em>now</em> to get started.</h2>
                 <h2>You <em>know</em> you want to.</h2>
+                <h2>*This is not a real online service.</h2>
             </div>
             <form action="">
                 <div id="form">
@@ -57,7 +58,7 @@
                 </div>
                 <div id="button">
                     <button type="submit" id="submitBtn">Create Account</button>
-                    <p>Already have an account? <a href="https://www.youtube.com/watch?v=8s6KTJJVGzo">Log in</a></p>
+                    <p>Already have an account? <a href="bing.com">Log in</a></p>
                 </div>
             </form>
             <footer>
