slight adjustments nothing to note

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <form action="">
                 <div id="form">
-                    <h2 class="formTitle">Bunger Bunger ! ! !</h2>
+                    <h3 class="formTitle">Bunger Bunger ! ! !</h3>
                             <div class="input">
                                 <label for="nameFirst">First Name: </label>
                                 <input type="text" name="name_first" id="namefirst" placeholder="Robert" minlength="1" pattern="[a-zA-Z]*" required>
@@ -58,7 +58,8 @@
                 </div>
                 <div id="button">
                     <button type="submit" id="submitBtn">Create Account</button>
-                    <p>Already have an account? <a href="bing.com">Log in</a></p>
+                    <p>Already have an account?<br>
+                        <a href="https://www.youtube.com/watch?v=8s6KTJJVGzo">Log in</a></p>
                 </div>
             </form>
             <footer>
